--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,7 +5,7 @@
 /* Hero Section */
 .hero-section {
     height: 80vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('./home.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../assets/home.png');
     background-size: cover;
     background-position: center;
     display: flex;
