--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,27 +1,13 @@
 .about-container {
-    position: relative;
     width: 100%;
-    min-height: 80vh;
-    /* Adjust based on navbar/footer height */
+    /* Removed min-height to fit new hero layout */
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    padding: 2rem 0;
 }
 
-.about-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../assets/image.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    filter: blur(8px);
-    z-index: 1;
-}
+/* Removed .about-background as it's replaced by shared page-hero */
 
 .about-content {
     position: relative;
