--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -438,7 +438,9 @@
     margin: 0 auto;
 }
 
-.section-title {
+/* Scope section title styling to Home featured section only
+   (prevents overriding other pages like ProductDetail) */
+.featured-section .section-title {
     text-align: center;
     margin-bottom: 3rem;
     font-size: 2rem;
@@ -446,7 +448,7 @@
     position: relative;
 }
 
-.section-title::after {
+.featured-section .section-title::after {
     content: '';
     display: block;
     width: 60px;
